# evolve_frontend_admin

./: .gitignore  Cargo.toml  index.html
src/: confirm_form.rs  forget_pwd.rs  login.rs  main.rs  register.rs  role_list.rs  user_form.rs  user_list.rs  user_list_item.rs
src/component/: menu.rs  message_dialog.rs  message_item.rs  message_list.rs  pager.rs  pager_item.rs  welcome.rs
src/error_page/: page_not_found.rs
src/layout/: header.rs  layout.rs  navbar.rs
src/util/: common.rs  error.rs  request.rs
