[package]
edition = "2021"
name = "evolve_frontend_admin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
# chrono = "*"
# gloo = "*"
# gloo-console = "*"
gloo-net = "0"
# gloo-utils = "*"
# js-sys = "*"
# log = "*"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
# wasm-bindgen = {version = "0.2"}
futures = "0"
getrandom = {version = "0", features = ["js"]}
gloo = "0"
wasm-bindgen-futures = "0"
# gloo-utils = "0.1"
chrono = "0"
log = "0"
rand = "0"
regex = "1"
wasm-logger = "0"

# yew = {git = "https://github.com/yewstack/yew.git", features = ["csr"]}
# yew-router = {git = "https://github.com/yewstack/yew.git"}
yew = {version = "0", features = ["csr"]}
yew-router = {version = "0"}
# html-escape = "0.2.11"
# openapi = {path = "./openapi"} // can not use by wasm
# utilities = {git = "https://github.com/yuexclusive/utilities", features = ["datetime"]}
user_cli = {path = "../evolve_backend/openapi_cli/user_cli"}
utilities = {path = "../../utilities", features = ["datetime"]}
uuid = {version = "1", features = ["v4", "fast-rng", "macro-diagnostics"]}
lazy_static = "1"

[dependencies.web-sys]
features = [
  "console",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
version = "0"
